[gd_scene load_steps=23 format=3 uid="uid://c2pxcd658n8x8"]

[ext_resource type="Theme" uid="uid://cdnakyvh2ng41" path="res://Resources/theme.tres" id="1_piyta"]
[ext_resource type="Texture2D" uid="uid://bwjfxpml8l2yu" path="res://Assets/Classroom/classroom.png" id="2_culqm"]
[ext_resource type="Script" path="res://Levels/main_menu.gd" id="2_veh0c"]
[ext_resource type="Texture2D" uid="uid://dhiij4f5op4ku" path="res://Assets/Desk/desk_dirty.png" id="4_4r3xx"]
[ext_resource type="Texture2D" uid="uid://bcq554fvqjas7" path="res://Assets/Desk/desk_clean.png" id="5_hvajg"]
[ext_resource type="Texture2D" uid="uid://h46fx5mu0u63" path="res://Assets/Teacher/spritesheet_teacher_desk.png" id="6_wk72p"]
[ext_resource type="Texture2D" uid="uid://b07uuea0a43no" path="res://Assets/Teacher/spritesheet_teacher.png" id="7_l1sk7"]
[ext_resource type="PackedScene" uid="uid://dnhrpo8g4oeh1" path="res://Scenes/desk.tscn" id="8_4exhx"]
[ext_resource type="Texture2D" uid="uid://cv11ve43s03o" path="res://Assets/Teacher/teacher_assistant_walk_down.png" id="8_cqf8j"]
[ext_resource type="Texture2D" uid="uid://drp8u10sldds1" path="res://Assets/Desk/spritesheet_start.png" id="9_c73gy"]
[ext_resource type="Texture2D" uid="uid://dnl3cwlonbsb6" path="res://Assets/Desk/spritesheet_end.png" id="10_k1d6j"]
[ext_resource type="PackedScene" uid="uid://dstfh7u2o7dj" path="res://Scenes/desk_bully.tscn" id="11_43vsw"]

[sub_resource type="AtlasTexture" id="AtlasTexture_erswq"]
atlas = ExtResource("6_wk72p")
region = Rect2(0, 0, 192, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbkca"]
atlas = ExtResource("6_wk72p")
region = Rect2(192, 0, 192, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8om7"]
atlas = ExtResource("6_wk72p")
region = Rect2(384, 0, 192, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_5ysd0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_erswq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbkca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8om7")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_2wkte"]
atlas = ExtResource("7_l1sk7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvk8u"]
atlas = ExtResource("7_l1sk7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_w0b3r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wkte")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvk8u")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_agvgm"]
atlas = ExtResource("8_cqf8j")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7hki"]
atlas = ExtResource("8_cqf8j")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_536vu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_agvgm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7hki")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[node name="MainMenu" type="Control"]
y_sort_enabled = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_piyta")
script = ExtResource("2_veh0c")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_culqm")

[node name="Desks" type="Node2D" parent="."]

[node name="Desk" type="Sprite2D" parent="Desks"]
position = Vector2(88, 160)
texture = ExtResource("4_4r3xx")

[node name="Desk2" type="Sprite2D" parent="Desks"]
visible = false
position = Vector2(88, 240)
texture = ExtResource("5_hvajg")

[node name="Desk3" type="Sprite2D" parent="Desks"]
position = Vector2(88, 320)
texture = ExtResource("5_hvajg")

[node name="Desk4" type="Sprite2D" parent="Desks"]
position = Vector2(184, 160)
texture = ExtResource("5_hvajg")

[node name="Desk5" type="Sprite2D" parent="Desks"]
position = Vector2(184, 240)
texture = ExtResource("4_4r3xx")
flip_h = true

[node name="Desk6" type="Sprite2D" parent="Desks"]
position = Vector2(184, 320)
texture = ExtResource("5_hvajg")

[node name="Desk7" type="Sprite2D" parent="Desks"]
position = Vector2(472, 160)
texture = ExtResource("4_4r3xx")

[node name="Desk8" type="Sprite2D" parent="Desks"]
position = Vector2(472, 240)
texture = ExtResource("5_hvajg")

[node name="Desk9" type="Sprite2D" parent="Desks"]
position = Vector2(472, 320)
texture = ExtResource("5_hvajg")

[node name="Desk10" type="Sprite2D" parent="Desks"]
visible = false
position = Vector2(568, 160)
texture = ExtResource("5_hvajg")

[node name="Desk11" type="Sprite2D" parent="Desks"]
position = Vector2(568, 240)
texture = ExtResource("5_hvajg")

[node name="Desk12" type="Sprite2D" parent="Desks"]
position = Vector2(568, 320)
texture = ExtResource("4_4r3xx")
flip_h = true

[node name="Desk13" type="Sprite2D" parent="Desks"]
position = Vector2(280, 160)
texture = ExtResource("5_hvajg")

[node name="Desk14" type="Sprite2D" parent="Desks"]
visible = false
position = Vector2(280, 240)
texture = ExtResource("5_hvajg")

[node name="Desk15" type="Sprite2D" parent="Desks"]
position = Vector2(280, 320)
texture = ExtResource("4_4r3xx")

[node name="Desk16" type="Sprite2D" parent="Desks"]
position = Vector2(376, 160)
texture = ExtResource("5_hvajg")

[node name="Desk17" type="Sprite2D" parent="Desks"]
visible = false
position = Vector2(376, 240)
texture = ExtResource("4_4r3xx")
flip_h = true

[node name="Desk18" type="Sprite2D" parent="Desks"]
visible = false
position = Vector2(376, 320)
texture = ExtResource("5_hvajg")

[node name="TeacherDesk" type="AnimatedSprite2D" parent="."]
position = Vector2(136, 88)
sprite_frames = SubResource("SpriteFrames_5ysd0")
autoplay = "default"

[node name="Teacher" type="AnimatedSprite2D" parent="."]
position = Vector2(192, 56)
sprite_frames = SubResource("SpriteFrames_w0b3r")
autoplay = "default"
frame = 1
frame_progress = 0.842751

[node name="TeacherAssistant" type="AnimatedSprite2D" parent="."]
position = Vector2(608, 56)
sprite_frames = SubResource("SpriteFrames_536vu")
autoplay = "default"
frame_progress = 0.154279

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = 6.0
offset_right = 52.5
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play"
metadata/_edit_lock_ = true

[node name="StartDesk" parent="." instance=ExtResource("8_4exhx")]
position = Vector2(88, 240)
kids = Array[Texture2D]([ExtResource("9_c73gy")])
start_sprite = null
end_sprite = null

[node name="EndDesk" parent="." instance=ExtResource("8_4exhx")]
position = Vector2(568, 160)
kids = Array[Texture2D]([ExtResource("10_k1d6j")])
start_sprite = null
end_sprite = null
answer_sprite = null

[node name="BullyDesk" parent="." instance=ExtResource("11_43vsw")]
position = Vector2(376, 320)

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
